syntax = "proto3";

package protocol;

message Position {
    double time = 2;
    float position_x = 3;
    float position_y = 4;
    float position_z = 5;
    float rotation_x = 6;
    float rotation_y = 7;
    float rotation_z = 8;
    float rotation_w = 9;
}

message Profile {
    double time = 2;
    string profile_version = 3;
    enum ProfileType {
        LOCAL = 0;
        DEPLOYED = 1;
    }
    ProfileType profile_type = 4;
}

message ProfileRequest {
    double time = 2;
    string profile_version = 3;
    string user_id = 4;
}

message ProfileResponse {
    double time = 2;
    string serialized_profile = 3;
}

message Chat {
    double time = 2;
    string message_id = 3;
    string text = 4;
}

message Scene {
    double time = 2;
    string scene_id = 3;
    string data = 4;
}

message Voice {
    bytes encoded_samples = 2;
    uint32 index = 3;
}

message Data {
  oneof message {
    Position position = 1;
    Profile profile = 2;
    ProfileRequest profile_request = 3;
    ProfileResponse profile_response = 4;
    Chat chat = 5;
    Scene scene = 6;
    Voice voice = 7;
  }
}
